Opaque search index querying updates